# seo-content-generation-system

./: .env.example  .gitignore  ENHANCEMENTS.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_CONTEXT.md  README.md  SUGGESTED_ENHANCEMENTS.md  micromarket-draft-response.json  micromarket-publish-payload.json  pyproject.toml  review-session-locality.json
apps/api/src/seo_content_engine/: main.py
apps/api/tests/: test_artifact_writer_blocking.py  test_city_content_plan_route.py  test_city_draft_route.py  test_content_plan_builder.py  test_content_plan_route.py  test_draft_generation_service.py  test_draft_publish_route.py  test_draft_repair_loop.py  test_draft_route.py  test_factual_validator.py  test_generation.py  test_health.py  test_keyword_intelligence_service.py  test_keyword_seed_generator.py  test_keywords_route.py  test_micromarket_draft_route.py  test_review_route.py  test_review_workbench_service.py
apps/web/: package-lock.json  package.json
apps/web/src/: main.tsx
apps/web/src/api/: http.ts  review.ts  streaming.ts
apps/web/src/components/: AppLayout.tsx
apps/web/src/config/: env.ts
apps/web/src/pages/: NotFoundPage.tsx  ReviewWorkbenchPage.tsx
apps/web/src/router/: index.tsx
data/artifacts/: andheri-west-resale_locality-draft.docx  mumbai-resale_city-draft.docx
data/samples/raw/: Chandigarh Micromarket Property Rates.json  Chandigarh micromarket.json  Mumbai Property rates.json  andheri-west-locality.json  andheri-west-property-rates.json  bangalore-property-rates.json  delhi-property-rates.json  gurgaon-property-rates.json
scripts/: run_api.sh
(+34 files in other folders)
