[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-content-generation-system"
version = "0.1.0"
description = "Programmatic SEO content engine for Square Yards listing pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]

[tool.pytest.ini_options]
pythonpath = [
  "apps/api/src"
]
testpaths = [
  "apps/api/tests"
]